turtleart.housetree.HouseTree.scala.error
Compilation error:
HouseTree:16: error: value droite is not a member of Unit
  for (i<-0 to 3) {maison(30);droite(270);avance(50)} droite(270)
                                                      ^